# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: first-workflow.yml
gendiff/: __init__.py  cli.py  formatter.py  generate_diff.py  generator.py  parser.py
gendiff/formatters/: choice_formatter.py  choose_formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_files.py  test_generate_diff.py  test_generate_diff_json.py  test_generate_diff_plain.py  test_generate_diff_stylish.py
tests/fixtures/: exp_json.txt  expected_generate_diff.json  expected_json.txt
